editing the body

--- a/home.html
+++ b/home.html
@@ -4,6 +4,6 @@
 	<title>Foss lab report</title>
 </head>
 <body>
-<h1>This is foss report</h1>
+<h1>This is foss report for git</h1>
 </body>
 </html>
